add a lot of stuff

--- a/docs/highlight/styles/darcula.css
+++ b/docs/highlight/styles/darcula.css
@@ -53,7 +53,7 @@ Darcula color scheme from the JetBrains family of IDEs
 }
 
 .hljs-string {
-  color: #6a8759;
+  color: #e5eee0;
 }
 
 .hljs-subst,
